--- a/src/style/SettingOverlay.css
+++ b/src/style/SettingOverlay.css
@@ -1,4 +1,19 @@
 .setting-form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+}
+
+.camera-setting {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 60vh;
+}
+
+.form-controller {
+    margin: 10px;
+    padding: 22px;
 }
