--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,11 +1,13 @@
+
 .button-wrapper {
     display: flex;
     justify-content: center;
+    margin: 20px;
 }
 
 .popup-form {
     width: 50vw;
     height: 50vh;
-    background-color: darkgray;
+    
 
 }
