--- a/src/style/Calib.css
+++ b/src/style/Calib.css
@@ -23,6 +23,12 @@
     margin-bottom: 10px;
     background-size: 600px 400px;
 }
+.ulti-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
 .data-list {
     width: 30vw;
 }
@@ -30,6 +36,28 @@
 .layout {
     display: flex;
     justify-content: space-around;
-    /* align-items: center;
-    flex-direction: column; */
+}
+
+.drawer {
+    display: none;
+}
+
+@media (max-width:800px) {
+    .layout {
+        display: flex;
+        flex-direction: column;
+        align-items: center;   
+    }
+    .data-list {
+        display: none;
+    }
+    .ulti-wrapper{
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+    }
+    .drawer {
+        display: flex;
+        margin: 0 10px
+    }
 }
