--- a/src/style/Result.css
+++ b/src/style/Result.css
@@ -1,3 +1,9 @@
+.layout {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .button-wrapper {
     display: flex;
     justify-content: center;
