--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,4 +1,8 @@
-
+.page-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .button-wrapper {
     display: flex;
     justify-content: center;
