--- a/src/style/SettingOverlay.css
+++ b/src/style/SettingOverlay.css
@@ -1,19 +1,32 @@
+.main {
+    display: flex;
+    justify-content: center;
+}
 .setting-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
+    /* justify-content: center; */
+    align-items: flex-start;
+    margin-bottom: 30px;
+    /* width: 100vw; */
 }
 
 .camera-setting {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 60vh;
+    height: 65vh;
+    margin-bottom: 15px;
+}
+.setting-wrapper {
+    margin-bottom: 30px;
+}
+.controller {
+    margin-top: 10px; 
+}
+.field {
+    width: 50vw;
+    margin: 10px 0;
 }
 
-.form-controller {
-    margin: 10px;
-    padding: 22px;
-}
+
