backend + ref image upload

--- a/src/style/Calib.css
+++ b/src/style/Calib.css
@@ -24,6 +24,7 @@
 canvas {
     width: 600px;
     height: 400px;
+    /* background-image: url("../assets/Parking Lots/Sample lot/lmTst_0.jpg"); */
 }
 .image {
     margin-bottom: 10px;
