--- a/src/style/Calib.css
+++ b/src/style/Calib.css
@@ -66,13 +66,16 @@ canvas {
         flex-direction: column;
         align-items: center;   
     }
+    .image-editor {
+        padding:  0px;
+    }
     .data-list {
         display: none;
     }
     .ulti-wrapper{
         display: flex;
         flex-direction: row;
-        padding: 10px;
+        padding: 0px;
     }
     .drawer {
         display: flex;
