--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 
 .App {
   text-align: center;
+  background-color: #DDDDDD;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: scroll;
 }
 
 .App-logo {
