--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
 }
 .button-wrapper {
     display: flex;
@@ -12,6 +13,4 @@
 .popup-form {
     width: 50vw;
     height: 50vh;
-    
-
 }
